Improve form design

--- a/templates/existing_rsvp.html
+++ b/templates/existing_rsvp.html
@@ -38,7 +38,7 @@
 		</table>
 
         <center>
-            <a href='?edit=1'>Make changes</a> | <a href='/site'>Back to main site</a>
+            <a href='?edit=1'>Make changes</a> | <a href='/site'>Back to Main Site</a>
         </center>
         </div>
     </body>
