--- a/templates/site.html
+++ b/templates/site.html
@@ -160,7 +160,7 @@
                                     this church as it is the church in which Bethan was
                                     christened.</p>
                                 </div>
-                                <iframe width="600" height="450" frameborder="0" style="border:0"
+                                <iframe width="100%" height="450" frameborder="0" style="border:0"
                                     src="https://www.google.com/maps/embed/v1/place?q=st%20philips%20church%20maidstone&key=AIzaSyBcO1PPLgjlC5-AO-8qX-FY8zKHnrz3YVA" allowfullscreen></iframe>
                             </div>
                         </div>
@@ -195,7 +195,7 @@
                                     be using this.
                                     </p>
                                 </div>
-                                <iframe width="600" height="450" frameborder="0" style="border:0"
+                                <iframe width="100%" height="450" frameborder="0" style="border:0"
                                         src="https://www.google.com/maps/embed/v1/place?q=51.288914%2C%200.376690&key=AIzaSyBcO1PPLgjlC5-AO-8qX-FY8zKHnrz3YVA" allowfullscreen></iframe>
                             </div>
                         </div>
