--- a/templates/site.html
+++ b/templates/site.html
@@ -458,7 +458,22 @@
         <div class="dark">
             <div class="container">
                 <div class="row white card card-body">
-                    <p>You can book a cab</p>
+                    <p>Unfortunately there aren't many Ubers in Offham, and hailing a cab can be quite tricky.
+                       Instead, here are a few local taxi companies:</p>
+                    <ul>
+                        <li>
+                            <a href="http://www.westmallingtaxis.co.uk/">West Malling Taxis</a>
+                            - 01732 845535
+                        </li>
+                        <li>
+                            <a href="http://www.kingshillcars.com/">Kingshill Cars</a>
+                            - 01732 871234
+                        </li>
+                        <li>
+                            <a href="https://www.bgtaxis.com/">Borough Green Station Cars</a>
+                            - 01732 882020
+                        </li>
+                    </ul>
                 </div>
             </div>
         </div>
