Add rsvp reminder bar

--- a/templates/index.html
+++ b/templates/index.html
@@ -58,7 +58,7 @@
                 <form id='form' class='form-inline justify-content-center' action="javascript:void()">
 					<div class="form-group">
 						<input id="password" type="text" class="form-control mr-2"/>
-						<button onclick="validatePassword()" class="btn btn-primary">&lt;Go&gt;</button>
+						<button onclick="validatePassword()" class="btn btn-primary">&lt;GO&gt;</button>
 					</div>
                 </form>
             </div>
