--- a/templates/site.html
+++ b/templates/site.html
@@ -20,6 +20,20 @@
                 margin: 0vh 0 10vh;
                 background:rgba(0, 0, 0,0.8);
                 padding: 4px 0 17px;
+                z-index: 2;
+            }
+
+            .rsvp-reminder {
+                margin: 0vh 0 0vh;
+                background:rgba(0, 0, 0,0.8);
+                padding: 5px 0 5px;
+                overflow: hidden;
+                background-color: #333;
+                position: fixed; /* Set the navbar to fixed position */
+                top: 0; /* Position the navbar at the top of the page */
+                width: 100%; /* Full width */
+                z-index: 1;
+                display:none;
             }
 
             @media (min-width: 762px) {
@@ -168,6 +182,22 @@
                     }
 				});
             }
+
+            function scrollToTop() {
+                window.scrollTo(0, 0);
+            }
+
+            window.onscroll = function() {
+                var rsvpReminder = document.getElementById("rsvp-reminder");
+                // TODO: Use some kind of real offset
+                if (window.pageYOffset >= 100) {
+                    rsvpReminder.style.display = 'block';
+                }
+                else {
+                    rsvpReminder.style.display = 'none';
+                }
+            };
+
         </script>
     </head>
     <body>
@@ -203,11 +233,15 @@
                         <div class="form-group">
                             <label>Confirmation code</label>
                             <input id="code" type="text" class='form-control ml-2 mr-2' value='{{ code }}'/>
-                            <button onclick="handleSubmit2()" class='btn btn-primary'>&lt;Go&gt;</button>
+                            <button onclick="handleSubmit2()" class='btn btn-primary'>&lt;GO&gt;</button>
                         </div>
                     </form>
                 </div>
 
+            </div>
+
+            <div id="rsvp-reminder" class="rsvp-reminder text-center">
+                <button class="btn btn-primary" onclick='scrollToTop()'>Click here to <strong>RSVP</strong></button>
             </div>
 
             <div class="container text-center">
